--- a/kanbun.html
+++ b/kanbun.html
@@ -17,11 +17,11 @@
   本JavaScriptは、同一の漢文データを「原文」、「訓読」、「読み下し文」の３つにわけて表示することを可能にします。利点は以下のとおりです。
 </p>
 <ul>
-  <li>青空文庫の拡張書式を応用しており、青空文庫形式に慣れた方ならすぐ利用できます。</li>
+  <li>青空文庫の拡張書式を応用しており、青空文庫の漢文形式に慣れた方ならすぐ利用できます。</li>
   <li>通常のテキストエディタで簡単に原文から訓読漢文を作成できます。</li>
   <li>原漢文の順序の情報を損ないません。</li>
   <li>データに再利用性が高く、適当なフィルタを書けば好きなフォーマットに変更できます。</li>
-  <li>uplatex &amp; sfkanbun.sty の組み合わせで、多数の漢字に対応した美しい組版が可能です。</li>
+  <!--li>uplatex &amp; sfkanbun.sty の組み合わせで、多数の漢字に対応した美しい組版が可能です。</li-->
 </ul>
 
 <h4>使い方</h4>
@@ -40,14 +40,15 @@
 <p>
 次に、読み仮名を「青空文庫形式」で挿入します。
 </p>
-<pre>「吾《われ》嘗《かつ》テ終日《しゅうじつ》不《ず》［＃レ］食《く》ラハ、
+<pre>「吾《われ》嘗《かつ》テ終《しゅう》日《じつ》不《ず》［＃レ］食《く》ラハ、
 終夜《しゅうや》不《ず》［＃レ］寝《い》ネ、以《もつ》テ思《おも》フ。」
 </pre>
 <p>
 このようにして作成した漢文を、HTMLファイルののkanbunクラスに入れます。
+なお、『「』や『」』（鍵括弧文字）など、漢字に関係ない文字を入れるとエラーになります。
 </p>
-<pre>&lt;div class="kanbun"&gt;「吾《われ》嘗《かつ》テ終日《しゅうじつ》不《ず》［＃レ］食《く》ラハ、
-終夜《しゅうや》不《ず》［＃レ］寝《い》ネ、以《もつ》テ思《おも》フ。」&lt;/div&gt;</pre>
+<pre>「&lt;div class="kanbun"&gt;吾《われ》嘗《かつ》テ終《しゅう》日《じつ》不《ず》［＃レ］食《く》ラハ、
+終《しゅう》夜《や》不《ず》［＃レ］寝《い》ネ、以《もつ》テ思《おも》フ。&lt;/div&gt;」</pre>
 <p>
 HTMLのHEAD要素で、jquery.js と kanbun.jsを読み込ませます。
 </p>
@@ -132,9 +133,9 @@ HTMLのHEAD要素で、jquery.js と kanbun.jsを読み込ませます。
     </td>
   <tr>
     <td id="sample6" class="kanbun"
-      >引キテ［＃レ］酒ヲ且《》ニ〈ス〉［＃レ］飲マント［＃レ］之ヲ。</td>
+      >引キテ［＃レ］酒ヲ且ニ〈ス〉［＃レ］飲マント［＃レ］之ヲ。</td>
     </td>
-    <td>再読文字で、読み下しをしない漢字は、その漢字の後ろに空の《》を付します。</td>
+    <td>再読文字で、最初の読みがない場合は省略できます。</td>
     <td>
       <a href="javascript:kanbun_html_to_original('#sample6');">入力テキスト</a>・
       <a href="javascript:kanbun_html_to_kanbun('#sample6',false,false,false,false,false);">原文</a>・
