--- a/kanbun.html
+++ b/kanbun.html
@@ -6,8 +6,8 @@
   <script src="kanbun.js" type="text/javascript" charset="utf-8"></script>
   <style type="text/css">
     body {
-    writing-mode: tb-rl;
-    direction: ltr;
+    writing-mode: vertical-rl;
+    -webkit-writing-mode: vertical-rl;
     }
   </style>
 </head>
