--- a/kanbun.html
+++ b/kanbun.html
@@ -59,6 +59,11 @@
     </td>
     <td>置き字は、その漢字の後ろに空の〈〉を付します。</td>
   <tr>
+    <td id="sample5" class="kanbun"
+      >盍《なん》［＃（ゾ）］〈ザ〉［＃（ル）］［＃レ］反《かへ》［＃（ラ）］［＃二］其［＃（ノ）］本［＃（ニ）］［＃一］矣〈〉。</td>
+    </td>
+    <td>送り仮名は、［＃（…）］の記法でも記述できます。再読文字の送り仮名も同様に書けます。</td>
+  <tr>
     <td id="sample6" class="kanbun"
       >引キテ［＃レ］酒ヲ且ニ〈ス〉［＃レ］飲マント［＃レ］之ヲ。</td>
     </td>
